# commity

./: .commity.yaml  .goreleaser.yaml  README.md  go.mod  go.sum
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs  tui_config.rs
cmd/commity/: main.go
desktop/: package.json
desktop/src-tauri/: tauri.conf.json
internal/config/: config.go
internal/utils/: utils.go
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  render.rs  utils.rs
