[package]
name = "commity-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tuirealm = { version = "2.0.3", default-features = false, features = [ "derive", "crossterm" ]}
unicode-width = "0.2.0"
smol = "2.0.2"
commity-lib = { path = "../lib" }
ratatui = "0.29.0"
crossterm = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"